[package]
name = "server_v2"
version = "0.1.0"
authors = ["Tobias Feld <tobias.feld@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = {version = "4.0.1", default-features = false}
uuid = { version = "0.8", features = ["serde", "v4"] }
sentry = "0.22.0"
sqlx = { version = "0.5.1", features = [ "runtime-async-std-native-tls", "sqlite" ] }
async-std = { version = "1.6", features = [ "attributes" ] }
nickel = "0.11.0"
serde = "1.0.126"
serde_json = "1.0.64"
bcrypt = "0.10"
rand = "0.8.4"
chrono = "0.4.19"